Other changes to dialogs and some other things

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <h3>¡Una photo vale mas que mil palabras!</h3>
+            <h3>¡Una foto vale mas que mil palabras!</h3>
             <p>
               Ayudanos a capturar el momento, sube las fotos con el hashtag
               <a
@@ -520,9 +520,10 @@
                 <span>&times;</span>
               </button>
               <div class="section-padding">
-                <h3>Thank you!</h3>
-                <p>We are glad to see you join us on our big day.</p>
-                <div id="add-to-cal"></div>
+                <h3>¡Gracias!</h3>
+                <p>Estamos encantados de que puedas acompañarnos en nuestro Gran Día.</p>
+                <div id="add-to-cal-1"></div>
+                <div id="add-to-cal-2"></div>
               </div>
             </div>
           </div>
@@ -535,10 +536,9 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-md-offset-3">
-            <h3>What are you waiting for?</h3>
+            <h3>¿Qué estas esperando?</h3>
             <p>
-              We would greatly appreciate if you could RSVP before 1st of
-              November '17
+              Estariamos muy agradecidos si pudiera confirmar su asistencia antes del 1ro de Enero del 2025
             </p>
             <form id="rsvp-form" class="rsvp-form" action="" method="POST">
               <div class="row">
@@ -549,7 +549,7 @@
                       type="email"
                       name="email"
                       class=""
-                      placeholder="Your email"
+                      placeholder="Correo electrónico"
                       required
                     />
                   </div>
@@ -560,7 +560,7 @@
                     ><input
                       name="name"
                       class=""
-                      placeholder="Your name"
+                      placeholder="Nombre completo"
                       required
                     />
                   </div>
@@ -575,8 +575,8 @@
                       name="extras"
                       class=""
                       min="0"
-                      max="4"
-                      placeholder="Husband/Wife or kids"
+                      max="1"
+                      placeholder="Pareja o Acompañante"
                       required
                     />
                   </div>
@@ -590,7 +590,7 @@
                       id="invite_code"
                       class=""
                       min="0"
-                      placeholder="Invite code"
+                      placeholder="Código de Invitación"
                       required
                     />
                   </div>
@@ -599,7 +599,7 @@
               <div class="row">
                 <div class="col-md-12" id="alert-wrapper"></div>
               </div>
-              <button class="btn-fill rsvp-btn">Yes, that's me!</button>
+              <button class="btn-fill rsvp-btn">Si, ¡Ese soy yo!</button>
             </form>
           </div>
         </div>
@@ -614,8 +614,8 @@
               ><a href="#top" class="to-top"><i class="fa fa-angle-up"></i></a
             ></span>
             <p>
-              Crafted by Ram with lots of
-              <span class="fa fa-heart pulse2"></span> for Antara
+              Desarrollado con mucho amor de Emmanuel
+              <span class="fa fa-heart pulse2"></span> para Mariela
             </p>
           </div>
         </div>
