--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Emmanuel & Mariela se van a casar</title>
+    <title>Mariela & Emmanuel se van a casar</title>
     <meta
       name="description"
       content="Te queremos invitar a nuestra celebración de bodas."
@@ -297,9 +297,9 @@
             <p>
               Ayudanos a capturar el momento, sube las fotos con el hashtag
               <a
-                href="https://instagram.com/explore/tags/EmmanuelAndMariela/"
+                href="https://instagram.com/explore/tags/MarielaAndEmmanuel/"
                 target="_blank"
-                >#EmmanuelAndMariela</a
+                >#MarielaAndEmmanuel</a
               >
             </p>
           </div>
@@ -567,20 +567,6 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-md-6 col-sm-6">
-                  <div class="form-input-group">
-                    <i class="fa fa-users"></i
-                    ><input
-                      type="number"
-                      name="extras"
-                      class=""
-                      min="0"
-                      max="1"
-                      placeholder="Pareja o Acompañante"
-                      required
-                    />
-                  </div>
-                </div>
                 <div class="col-md-6 col-sm-6">
                   <div class="form-input-group">
                     <i class="fa fa-key"></i
