Some changes to maps

--- a/index.html
+++ b/index.html
@@ -155,15 +155,11 @@
           </div>
           <div class="col-md-6">
             <p>
-              I first saw Antara in the Fall of 2008 when we started our
-              undergrad. I was instantly attracted to her but was far too
-              nervous to speak to her. I had told my friend I liked her and news
-              had traveled fast and she soon found out. Her first reaction was
-              "Who is Ram?" and she began searching for me in the class. She
-              started to take notice of me and no matter how boring the lecture
-              was, we never missed a class after that. After a good few months I
-              finally plucked up the courage to ask her out and the rest is
-              history :)
+              Nos conocimos en una actividad con unos amigos en el Jardín Botánico
+              de Santo Domingo en el 2021, y tuvimos una conexión instantánea.
+              Después de ese primer encuentro, tuvimos algunas salidas junto a algunos
+              amigos antes de que Emmanuel reuniera el valor de invitarla a salir.
+              En el 16 de mayo del 2021, comenzamos a ser novios y el resto es historia :)
             </p>
           </div>
           <div class="col-md-3 hidden-sm hidden-xs">
@@ -194,12 +190,9 @@
               <p><strong>16 de Mayo del 2024</strong></p>
               <h5>Parroquia Jesús Maestro<span class="time">6PM - 8PM</span></h5>
               <p>
-                It's one of the oldest traditional Indian pre wedding ceremony
-                where the bride and groom attend the event together and a
-                professional mehndi artist applies mehndi to the bride's hands
-                and feet. This will be having a celebratory festival feel to it
-                with people wearing vibrant clothes and dancing, singing,
-                playing games and a lot more.
+                Tendremos la celebración de la ceremonia de bodas en esta parroquia al estilo
+                tradicional de la Iglesia Católica. Por favor revisar el <a data-toggle="modal" data-target="#dc-modal">código de vestimenta </a>
+                de este evento. 
               </p>
             </div>
           </div>
@@ -208,11 +201,9 @@
               <p><strong>16 de Mayo del 2024</strong></p>
               <h5>Club Deportivo Naco - Extensión Salon Principal <span class="time">9PM</span></h5>
               <p>
-                The haldi ceremony is usually held separately for the bride and
-                the groom. This one is for the bride. It is a low-key event that
-                involves the application of turmeric paste on the hands, legs
-                and face of the bride. The groom is not allowed to see the bride
-                after this ritual until the final wedding ceremony starts.
+                Tendremos la celebración de la fiesta de bodas en el Salon Extension Salon Principal del Club Deportivo Naco. 
+                Por favor revisar el <a data-toggle="modal" data-target="#dc-modal">código de vestimenta</a>
+                de este evento. Les recuerdo que para la fiesta, <strong>los niños no estan permitidos.</strong>
               </p>
             </div>
           </div>
@@ -624,7 +615,7 @@
     <script
       async
       defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlPw3GQYI3faa_9mRE6plWuM7xNEmrwH0&callback=initMaps"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxoMfL0CEoxB88w_Pw3VUt54S52ljJHEM&callback=initMaps"
     ></script>
     <!-- Google Analytics -->
     <script>
