Update to the page

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </ul>
                 <ul class="member-actions">
                   <li><a href="#map" class="login">Ubicación</a></li>
-                  <li><a href="#rsvp" class="btn-white btn-small">RSVP</a></li>
+                  <li><a href="#rsvp" class="btn-white btn-small">Confirmar Asistencia</a></li>
                 </ul>
               </nav>
             </div>
@@ -118,7 +118,7 @@
         <div class="row">
           <div class="col-sm-4 hidden-xs"></div>
           <div class="col-sm-4 hidden-xs text-center">
-            <a href="#rsvp" class="btn btn-accent btn-large rsvp-btn">RSVP</a>
+            <a href="#rsvp" class="btn btn-accent btn-large rsvp-btn">Confirmar Asistencia</a>
           </div>
           <div class="col-sm-4 hidden-xs"></div>
         </div>
@@ -181,7 +181,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h3 class="header">Events</h3>
+            <h3 class="header">Eventos</h3>
           </div>
         </div>
         <div class="row">
@@ -419,12 +419,19 @@
                   <p>Calle Jesús Maestro #5, Mirador Sur, Santo Domingo, Distrito Nacional, República Dominicana </p>
                 </div>
                 <div class="col-md-6">
+                  <h5>Mariela Nouel</h5>
+                  <p>
+                    <i class="fa fa-mobile"></i>
+                    <a href="tel://+18298529862">+1 829 852 9862</a><br />
+                    <i class="fa fa-whatsapp"></i>
+                    <a href="https://wa.me/+18298529862">WhatsApp</a>
+                  </p>
                   <h5>Emmanuel Polanco</h5>
                   <p>
                     <i class="fa fa-mobile"></i>
                     <a href="tel://+18094302433">+1 809 430 2433</a><br />
-                    <!-- <i class="fa fa-mobile"></i>
-                    <a href="tel://+917123456789">+1 7123456789</a> -->
+                    <i class="fa fa-whatsapp"></i>
+                    <a href="https://wa.me/+18094302433">WhatsApp</a>
                   </p>
                 </div>
               </div>
@@ -468,12 +475,19 @@
                   <p>Calle Salvador Sturla esq. Calle Gracita Álvarez, Ensanche Naco, Santo Domingo, Distrito Nacional, República Dominicana</p>
                 </div>
                 <div class="col-md-6">
+                  <h5>Mariela Nouel</h5>
+                  <p>
+                    <i class="fa fa-mobile"></i>
+                    <a href="tel://+18298529862">+1 829 852 9862</a><br />
+                    <i class="fa fa-whatsapp"></i>
+                    <a href="https://wa.me/+18298529862">WhatsApp</a>
+                  </p>
                   <h5>Emmanuel Polanco</h5>
                   <p>
                     <i class="fa fa-mobile"></i>
                     <a href="tel://+18094302433">+1 809 430 2433</a><br />
-                    <!-- <i class="fa fa-mobile"></i>
-                    <a href="tel://+917123456789">+1 7123456789</a> -->
+                    <i class="fa fa-whatsapp"></i>
+                    <a href="https://wa.me/+18094302433">WhatsApp</a>
                   </p>
                 </div>
               </div>
@@ -615,7 +629,7 @@
     <script
       async
       defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxoMfL0CEoxB88w_Pw3VUt54S52ljJHEM&callback=initMaps"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxoMfL0CEoxB88w_Pw3VUt54S52ljJHEM&callback=initMaps&libraries=marker&loading=async"
     ></script>
     <!-- Google Analytics -->
     <script>
