--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="manifest.json" crossorigin="use-credentials" />
     <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5" />
 
     <script>
@@ -199,7 +199,7 @@
           <div class="col-md-6 col-sm-12 col-xs-12 rightcol">
             <div class="wp4">
               <p><strong>16 de Mayo del 2024</strong></p>
-              <h5>Club Deportivo Naco - Extensión Salon Principal <span class="time">9PM</span></h5>
+              <h5>Club Deportivo Naco - Extensión Salon Principal <span class="time">9PM - 3AM</span></h5>
               <p>
                 Tendremos la celebración de la fiesta de bodas en el Salon Extension Salon Principal del Club Deportivo Naco. 
                 Por favor revisar el <a data-toggle="modal" data-target="#dc-modal">código de vestimenta</a>
@@ -235,41 +235,21 @@
               </button>
               <h3 class="text-center section-padding">¿Cuál es el Codigo de Vestimenta?</h3>
               <h5>Parroquia Jesús Maestro <span class="time">6PM - 8PM</span></h5>
+              <h5>Club Deportivo Naco - Extension Salon Principal <span class="time">9PM - 3AM</span></h5>
               <p>
-                <strong>Ethnic indian wear</strong>
+                <strong>Ropa formal</strong>
                 <br />
-                Ladies can wear something
+                Las damas pueden vestirse
                 <a
                   href="https://www.pinterest.com/ramswarooppatra/mehndi-dress-for-women/"
-                  >bright & vivid</a
+                  >de esta manera</a
                 >
-                and gentlemen can be on their
+                y los caballeros pueden vestirse
                 <a
                   href="https://www.pinterest.com/ramswarooppatra/mehndi-dress-for-men/"
-                  >vibrant kurtas</a
-                >
-                with pants or pyjamas along with an optional shawl.
-              </p>
-              <h5>Club Deportivo Naco - Extension Salon Principal <span class="time">9PM</span></h5>
-              <p>
-                <strong>Indo-western</strong>
-                <br />
-                Ladies can flaunt their unconventional sarees,
-                <a
-                  href="https://www.pinterest.com/ramswarooppatra/indo-western-lehengas/"
-                  >lehengas</a
-                >,
-                <a
-                  href="https://www.pinterest.com/ramswarooppatra/indo-western-anarkalis/"
-                  >anarkalis</a
-                >, dresses and the list goes on whereas gentlemen can wear any
-                kind of suit or just blazer. If you don't like to wear a
-                suit/blazer, you can do a
-                <a
-                  href="https://www.pinterest.com/ramswarooppatra/high-neck-jackets-for-men/"
-                  >high-neck (band gala) waistcoat & shirt</a
-                >
-                combo.
+                  >de esta manera</a
+                >. 
+                Favor no usar los siguientes colores: 
               </p>
             </div>
           </div>
