--- a/index.html
+++ b/index.html
@@ -635,5 +635,8 @@
       ga("create", "UA-46465113-4", "auto");
       ga("send", "pageview");
     </script>
+    <script>
+      console.log(window.location.href)
+    </script>
   </body>
 </html>
