--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <div class="col-md-12 text-center">
             <h3>Nos vamos a casar</h3>
             <p>
-              La fecha seria el 16 de Mayo del 2024, y deseamos que puedas ser parte de esta celebración.
+              La fecha es el 16 de Mayo del 2025, y deseamos que puedas ser parte de esta celebración.
             </p>
             <div class="share-bar"></div>
           </div>
@@ -187,7 +187,7 @@
         <div class="row">
           <div class="col-md-6 col-sm-12 col-xs-12 leftcol">
             <div class="wp3">
-              <p><strong>16 de Mayo del 2024</strong></p>
+              <p><strong>16 de Mayo del 2025</strong></p>
               <h5>Parroquia Jesús Maestro<span class="time">6PM - 8PM</span></h5>
               <p>
                 Tendremos la celebración de la ceremonia de bodas en esta parroquia al estilo
@@ -198,7 +198,7 @@
           </div>
           <div class="col-md-6 col-sm-12 col-xs-12 rightcol">
             <div class="wp4">
-              <p><strong>16 de Mayo del 2024</strong></p>
+              <p><strong>16 de Mayo del 2025</strong></p>
               <h5>Club Deportivo Naco - Extensión Salon Principal <span class="time">9PM - 3AM</span></h5>
               <p>
                 Tendremos la celebración de la fiesta de bodas en el Salon Extension Salon Principal del Club Deportivo Naco. 
