--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
               <h5>Parroquia Jesús Maestro<span class="time">6PM - 8PM</span></h5>
               <p>
                 Tendremos la celebración de la ceremonia de bodas en esta parroquia al estilo
-                tradicional de la Iglesia Católica. Por favor revisar el <a data-toggle="modal" data-target="#dc-modal">código de vestimenta </a>
+                tradicional de la Iglesia Católica. Por favor revisar el <a href="#dress-code-btn">código de vestimenta</a>
                 de este evento. 
               </p>
             </div>
@@ -202,7 +202,7 @@
               <h5>Club Deportivo Naco - Extensión Salon Principal <span class="time">9PM - 3AM</span></h5>
               <p>
                 Tendremos la celebración de la fiesta de bodas en el Salon Extension Salon Principal del Club Deportivo Naco. 
-                Por favor revisar el <a data-toggle="modal" data-target="#dc-modal">código de vestimenta</a>
+                Por favor revisar el <a href="#dress-code-btn">código de vestimenta</a>
                 de este evento. Les recuerdo que para la fiesta, <strong>los niños no estan permitidos.</strong>
               </p>
             </div>
@@ -211,6 +211,7 @@
         <div class="row section-padding">
           <div class="col-md-4 col-md-offset-4 text-center">
             <a
+              id="dress-code-btn"
               class="btn btn-accent btn-small"
               data-toggle="modal"
               data-target="#dc-modal"
@@ -277,7 +278,7 @@
         </div>
         <div class="row section-border wp7">
           <div class="col-md-4 col-md-offset-4">
-            <img src="img/iphone_instagram.jpg" />
+            <img src="img/instagram.png" />
           </div>
         </div>
       </div>
@@ -292,62 +293,62 @@
         </div>
         <div class="row">
           <div class="col-md-2">
-            <a class="fancybox" rel="group" href="img/eng_pics/_RFX2942-lg.jpg">
+            <a class="fancybox" rel="group" href="img/eng_pics/1.jpg">
               <div class="img-wrap">
                 <div class="overlay">
                   <i class="fa fa-search"></i>
                 </div>
-                <img src="img/eng_pics/_RFX2942-sm.jpg" alt="" />
+                <img src="img/eng_pics/1.jpg" alt="" />
               </div>
             </a>
           </div>
           <div class="col-md-2">
-            <a class="fancybox" rel="group" href="img/eng_pics/IMG_3483-lg.jpg">
+            <a class="fancybox" rel="group" href="img/eng_pics/2.jpg">
               <div class="img-wrap">
                 <div class="overlay">
                   <i class="fa fa-search"></i>
                 </div>
-                <img src="img/eng_pics/IMG_3483-sm.jpg" alt="" />
+                <img src="img/eng_pics/2.jpg" alt="" />
               </div>
             </a>
           </div>
           <div class="col-md-2">
-            <a class="fancybox" rel="group" href="img/eng_pics/_RFX2992-lg.jpg">
+            <a class="fancybox" rel="group" href="img/eng_pics/3.jpg">
               <div class="img-wrap">
                 <div class="overlay">
                   <i class="fa fa-search"></i>
                 </div>
-                <img src="img/eng_pics/_RFX2992-sm.jpg" alt="" />
+                <img src="img/eng_pics/3.jpg" alt="" />
               </div>
             </a>
           </div>
           <div class="col-md-2">
-            <a class="fancybox" rel="group" href="img/eng_pics/_RFX3064-lg.jpg">
+            <a class="fancybox" rel="group" href="img/eng_pics/4.jpg">
               <div class="img-wrap">
                 <div class="overlay">
                   <i class="fa fa-search"></i>
                 </div>
-                <img src="img/eng_pics/_RFX3064-sm.jpg" alt="" />
+                <img src="img/eng_pics/4.jpg" alt="" />
               </div>
             </a>
           </div>
           <div class="col-md-2">
-            <a class="fancybox" rel="group" href="img/eng_pics/NGP_4089-lg.jpg">
+            <a class="fancybox" rel="group" href="img/eng_pics/5.jpg">
               <div class="img-wrap">
                 <div class="overlay">
                   <i class="fa fa-search"></i>
                 </div>
-                <img src="img/eng_pics/NGP_4089-sm.jpg" alt="" />
+                <img src="img/eng_pics/5.jpg" alt="" />
               </div>
             </a>
           </div>
           <div class="col-md-2">
-            <a class="fancybox" rel="group" href="img/eng_pics/NGP_4119-lg.jpg">
+            <a class="fancybox" rel="group" href="img/eng_pics/6.jpg">
               <div class="img-wrap">
                 <div class="overlay">
                   <i class="fa fa-search"></i>
                 </div>
-                <img src="img/eng_pics/NGP_4119-sm.jpg" alt="" />
+                <img src="img/eng_pics/6.jpg" alt="" />
               </div>
             </a>
           </div>
