--- a/index.html
+++ b/index.html
@@ -420,7 +420,8 @@
                 <div class="col-md-6" style="padding: 5px">
                   <a
                     class="btn btn-fill btn-small"
-                    href="https://m.uber.com/ul/?action=setPickup&client_id=Yh7Dl6SjB56RY2JuuZF8ttVa6ryFV78W&pickup=my_location&dropoff[formatted_address]=Fortune%20Park%20Panchwati%20-%20Hotels%20in%20Kolkata%2C%20Howrah%2C%20West%20Bengal%2C%20India&dropoff[latitude]=22.593276&dropoff[longitude]=88.270277"
+                    target="_blank"
+                    href="https://m.uber.com/ul/?action=setPickup&client_id=9JiVrowKFFnwmQUUPRWQWSubHTzcOGSPqopNybvx&pickup=my_location&dropoff[formatted_address]=Parroquia%20Jesus%20Maestro%20Mirador%20Sur%20Santo%20Domingo%20Republica%20Dominicana&dropoff[latitude]=18.448354721069336&dropoff[longitude]=69.9560546875"
                     ><i class="fa fa-taxi"></i>&nbsp;&nbsp;Solicitar Uber</a
                   >
                 </div>
@@ -475,8 +476,9 @@
               <div class="row text-center">
                 <div class="col-md-6" style="padding: 5px">
                   <a
+                    target="_blank"
                     class="btn btn-fill btn-small"
-                    href="https://m.uber.com/ul/?action=setPickup&client_id=Yh7Dl6SjB56RY2JuuZF8ttVa6ryFV78W&pickup=my_location&dropoff[formatted_address]=Fortune%20Park%20Panchwati%20-%20Hotels%20in%20Kolkata%2C%20Howrah%2C%20West%20Bengal%2C%20India&dropoff[latitude]=22.593276&dropoff[longitude]=88.270277"
+                    href="https://m.uber.com/ul/?action=setPickup&client_id=9JiVrowKFFnwmQUUPRWQWSubHTzcOGSPqopNybvx&pickup=my_location&dropoff[formatted_address]=Club%20Deportivo%20Naco%20Naco%20Santo%20Domingo%20Republica%20Dominicana&dropoff[latitude]=18.48041343688965&dropoff[longitude]=-69.92567443847656"
                     ><i class="fa fa-taxi"></i>&nbsp;&nbsp;Solicitar Uber</a
                   >
                 </div>
