--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                   <a
                     class="btn btn-fill btn-small"
                     target="_blank"
-                    href="https://m.uber.com/ul/?action=setPickup&client_id=9JiVrowKFFnwmQUUPRWQWSubHTzcOGSPqopNybvx&pickup=my_location&dropoff[formatted_address]=Parroquia%20Jesus%20Maestro%20Mirador%20Sur%20Santo%20Domingo%20Republica%20Dominicana&dropoff[latitude]=18.448354721069336&dropoff[longitude]=69.9560546875"
+                    href="https://m.uber.com/ul/?action=setPickup&client_id=9JiVrowKFFnwmQUUPRWQWSubHTzcOGSPqopNybvx&pickup=my_location&dropoff[latitude]=18.448354721069336&dropoff[longitude]=-69.9560546875&dropoff[formatted_address]=Parroquia%20Jesus%20Maestro"
                     ><i class="fa fa-taxi"></i>&nbsp;&nbsp;Solicitar Uber</a
                   >
                 </div>
@@ -478,7 +478,7 @@
                   <a
                     target="_blank"
                     class="btn btn-fill btn-small"
-                    href="https://m.uber.com/ul/?action=setPickup&client_id=9JiVrowKFFnwmQUUPRWQWSubHTzcOGSPqopNybvx&pickup=my_location&dropoff[formatted_address]=Club%20Deportivo%20Naco%20Naco%20Santo%20Domingo%20Republica%20Dominicana&dropoff[latitude]=18.48041343688965&dropoff[longitude]=-69.92567443847656"
+                    href="https://m.uber.com/ul/?action=setPickup&client_id=9JiVrowKFFnwmQUUPRWQWSubHTzcOGSPqopNybvx&pickup=my_location&dropoff[latitude]=18.48041343688965&dropoff[longitude]=-69.92567443847656&dropoff[formatted_address]=Club%20Deportivo%20Naco"
                     ><i class="fa fa-taxi"></i>&nbsp;&nbsp;Solicitar Uber</a
                   >
                 </div>
