--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     />
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
   </head>
-  <body id="top">
+  < id="top">
     <section class="hero">
       <section class="navigation">
         <header>
@@ -637,6 +637,10 @@
       );
       ga("create", "UA-46465113-4", "auto");
       ga("send", "pageview");
+    </script>
+    <script>
+      console.log(MD5('26091997'));
+      console.log(MD5('21111998'));
     </script>
   </body>
 </html>
