--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-3 hidden-sm hidden-xs">
-            <img src="img/IMG_2317.jpg" class="wp1" />
+          <div class="col-md-6 hidden-sm hidden-xs">
+            <img src="img/FotoM&E.png" class="wp1" />
           </div>
           <div class="col-md-6">
             <p>
@@ -162,16 +162,10 @@
               En el 16 de mayo del 2021, comenzamos a ser novios y el resto es historia :)
             </p>
           </div>
-          <div class="col-md-3 hidden-sm hidden-xs">
-            <img src="img/DSD_0214.jpg" class="wp2" />
-          </div>
         </div>
         <div class="row">
-          <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg">
-            <img src="img/IMG_2317.jpg" class="wp8" />
-          </div>
-          <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg">
-            <img src="img/DSD_0214.jpg" class="wp9" />
+          <div class="col-sm-6 col-sm-push-2 col-xs-push-3 col-xs-6 hidden-md hidden-lg">
+            <img src="img/FotoM&E.png" class="wp8" />
           </div>
         </div>
       </div>
