Fix button color

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="row">
           <div class="col-sm-4 hidden-xs"></div>
           <div class="col-sm-4 hidden-xs text-center">
-            <a href="#rsvp" class="btn btn-accent btn-large rsvp-btn">Confirmar Asistencia</a>
+            <a href="#rsvp" class="btn-white btn-large btn-rsvp">Confirmar Asistencia</a>
           </div>
           <div class="col-sm-4 hidden-xs"></div>
         </div>
