--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
                 </ul>
                 <ul class="member-actions">
                   <li><a href="#map" class="login">Ubicación</a></li>
-                  <li><a href="#rsvp" class="btn-white btn-small">Confirmar Asistencia</a></li>
+                  <li><a href="#rsvp" class="btn-white btn-small">Asistencia</a></li>
+                  <li><a href="#gift" class="btn-white btn-small">Regalos</a></li>
                 </ul>
               </nav>
             </div>
@@ -488,6 +489,50 @@
       </div>
     </section>
 
+    <section id="gift" class="events section-padding">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <h3 class="header">Regalos</h3>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6 col-sm-12 col-xs-12 leftcol">
+            <div class="wp3">
+              <p><strong>Listas de Regalos</strong></p>
+              <p>
+                Si desea apoyarnos con algun regalo, puede utilizar cualquiera de estas listas de regalo que les presentamos a continuación.
+                <strong>Para cualquier informacion adicional, por favor contactarnos directamente.</strong>
+              </p>
+              <h5>Centro Cuesta</h5>
+              <a href="#">Url lista de regalo cuesta</a>
+              <h5>Amazon</h5>
+              <a href="#">Url lista de regalo amazon</a>
+            </div>
+          </div>
+          <div class="col-md-6 col-sm-12 col-xs-12 rightcol">
+            <div class="wp4">
+              <p><strong>Cuentas Bancarias</strong></p>
+              <p>
+                Si desea apoyarnos con algun aporte economico, puede utilizar cualquiera de estas cuentas bancarias que les presentamos a continuación.
+                <strong>Para cualquier informacion adicional, por favor contactarnos directamente.</strong>
+              </p>
+              <h5>Banco Popular</h5>
+              <ul>
+                <li><strong>Numero de Cuenta: </strong><span id="account-1">828190231 </span> <button class="btn btn-link" onclick="copyToClipboard('account-1')"><i class="fa fa-clipboard"></i></button></li>
+                <li><strong>Nombre Titular: </strong>Emmanuel Polanco y/o Mariela Nouel</li>
+              </ul>
+              <h5>Banco BHD</h5>
+              <ul>
+                <li><strong>Numero de Cuenta: </strong><span id="account-2">34295740014 </span><button class="btn btn-link" onclick="copyToClipboard('account-2')"><i class="fa fa-clipboard"></i></button></li>
+                <li><strong>Nombre Titular: </strong>Emmanuel Polanco y/o Mariela Nouel</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="rsvp text-center" id="rsvp">
       <div id="rsvp-modal" class="modal fade" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
@@ -602,6 +647,15 @@
         </div>
       </div>
     </footer>
+    <script>
+
+      function copyToClipboard( elm_id ) {
+        var text = document.getElementById(elm_id).innerHTML;
+        console.log(text);
+        navigator.clipboard.writeText(text);
+      }
+
+    </script>
     <script
       src="js/vendor/jquery.min.js"
       onerror="loadJsFromCDN('jquery.js')"
@@ -621,29 +675,5 @@
       defer
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDtMgf6otsx1qcVaYub_oloc-6ByKbSW2c&callback=initMaps&libraries=marker&loading=async"
     ></script>
-    <!-- Google Analytics -->
-    <script>
-      (function (i, s, o, g, r, a, m) {
-        i["GoogleAnalyticsObject"] = r;
-        (i[r] =
-          i[r] ||
-          function () {
-            (i[r].q = i[r].q || []).push(arguments);
-          }),
-          (i[r].l = 1 * new Date());
-        (a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m);
-      })(
-        window,
-        document,
-        "script",
-        "https://www.google-analytics.com/analytics.js",
-        "ga"
-      );
-      ga("create", "UA-46465113-4", "auto");
-      ga("send", "pageview");
-    </script>
   </body>
 </html>
