Missing details of wedding

--- a/index.html
+++ b/index.html
@@ -234,17 +234,14 @@
               <p>
                 <strong>Ropa formal</strong>
                 <br />
-                Las damas pueden vestirse
+                Pueden usar la siguiente guia para ver algunos estilos: 
                 <a
-                  href="https://www.pinterest.com/ramswarooppatra/mehndi-dress-for-women/"
-                  >de esta manera</a
-                >
-                y los caballeros pueden vestirse
-                <a
-                  href="https://www.pinterest.com/ramswarooppatra/mehndi-dress-for-men/"
-                  >de esta manera</a
+                  href="https://pin.it/6PTGfH649"
+                  target="_blank"
+                  >Link</a
                 >. 
                 Favor no usar los siguientes colores: 
+                Blanco, Negro, Rosado, Azul y Crema
               </p>
             </div>
           </div>
@@ -507,13 +504,13 @@
             </div>
             <div class="row">
               <div class="col-md-3 col-sm-12 col-xs-12 text-center align-self-center">
-                <a href="#" target="_blank">
+                <a href="#" target="_blank" class="hidden">
                   <img height="100px" src="img/cuesta-logo.jpeg"/>
                   <h5>Casa Cuesta</h5>
                 </a>
               </div>
               <div class="col-md-3 col-sm-12 col-xs-12 text-center align-self-center">
-                <a href="#" target="_blank">
+                <a href="https://www.amazon.com/hz/wishlist/ls/3H9F0070F4NDP?ref_=wl_share" target="_blank">
                   <img height="100px" src="img/amazon_logo.jpg"/>
                   <h5>Amazon</h5>
                 </a>
@@ -558,31 +555,6 @@
     </section>
 
     <section class="rsvp text-center" id="rsvp">
-      <div id="rsvp-modal" class="modal fade" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-body">
-              <button
-                type="button"
-                class="close"
-                data-dismiss="modal"
-                aria-label="Close"
-              >
-                <span>&times;</span>
-              </button>
-              <div class="section-padding">
-                <h3>¡Gracias!</h3>
-                <p>Estamos encantados de que puedas acompañarnos en nuestro Gran Día.</p>
-                <div id="add-to-cal-1"></div>
-                <div id="add-to-cal-2"></div>
-              </div>
-            </div>
-          </div>
-          <!-- /.modal-content -->
-        </div>
-        <!-- /.modal-dialog -->
-      </div>
-      <!-- /.modal -->
 
       <div class="container">
         <div class="row">
@@ -591,66 +563,7 @@
             <p>
               Estariamos muy agradecidos si pudiera confirmar su asistencia
             </p>
-            <form id="rsvp-form" class="rsvp-form" action="" method="POST">
-              <div class="row">
-                <div class="col-md-6 col-sm-6">
-                  <div class="form-input-group">
-                    <i class="fa fa-envelope"></i
-                    ><input
-                      type="email"
-                      name="email"
-                      class=""
-                      placeholder="Correo electrónico"
-                      required
-                    />
-                  </div>
-                </div>
-                <div class="col-md-6 col-sm-6">
-                  <div class="form-input-group">
-                    <i class="fa fa-user"></i
-                    ><input
-                      name="name"
-                      class=""
-                      placeholder="Nombre completo"
-                      required
-                    />
-                  </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-6 col-sm-6">
-                  <div class="form-input-group">
-                    <i class="fa fa-key"></i
-                    ><input
-                      type="tel"
-                      name="phone"
-                      class=""
-                      min="0"
-                      placeholder="Teléfono o Célular"
-                      required
-                    />
-                  </div>
-                </div>
-                <div class="col-md-6 col-sm-6">
-                  <div class="form-input-group">
-                    <i class="fa fa-key"></i
-                    ><input
-                      type="number"
-                      name="invite_code"
-                      id="invite_code"
-                      class=""
-                      min="0"
-                      placeholder="Código de Invitación"
-                      required
-                    />
-                  </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-12" id="alert-wrapper"></div>
-              </div>
-              <button class="btn-fill rsvp-btn">Si, ¡Ese soy yo!</button>
-            </form>
+            <a href="https://withjoy.com/emmanuel-and-mariela/rsvp" target="_blank" class="btn btn-accent btn-small">Confirmar Asistencia</a>
           </div>
         </div>
       </div>
