--- a/index.html
+++ b/index.html
@@ -15,10 +15,6 @@
       property="og:description"
       content="Te queremos invitar a nuestra celebración de bodas."
     />
-    <meta
-      property="og:image"
-      content="https://wedding.ramswaroop.me/img/hero-min.jpg"
-    />
     <meta property="og:type" content="website" />
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
@@ -135,7 +131,7 @@
           <div class="col-md-12 text-center">
             <h3>Nos vamos a casar</h3>
             <p>
-              La fecha es el 16 de Mayo del 2025, y deseamos que puedas ser parte de esta celebración.
+              Te invitamos a acompañarnos este 16 de Mayo del 2025, para que puedas ser parte de la celebración de nuestra unión.
             </p>
           </div>
         </div>
@@ -155,11 +151,10 @@
           </div>
           <div class="col-md-6">
             <p>
-              Nos conocimos en una actividad con unos amigos en el Jardín Botánico
-              de Santo Domingo en el 2021, y tuvimos una conexión instantánea.
-              Después de ese primer encuentro, tuvimos algunas salidas junto a algunos
-              amigos antes de que Emmanuel reuniera el valor de invitarla a salir.
-              En el 16 de mayo del 2021, comenzamos a ser novios y el resto es historia :)
+              A principios del 2021, unos amigos organizaron una actividad recreacional en el Jardín Botánico
+              de Santo Domingo, en la cual nos conocimos y tuvimos una conexión instantánea.
+              Despues de alugnas salidas juntos y algunas otras actividades con nuestros amigos, 
+              el 16 de mayo del 2021, marco el inicio de nuestra relación, y el resto es historia :) 
             </p>
           </div>
         </div>
@@ -184,8 +179,8 @@
               <p><strong>16 de Mayo del 2025</strong></p>
               <h5>Parroquia Jesús Maestro<span class="time">6PM - 8PM</span></h5>
               <p>
-                Tendremos la celebración de la ceremonia de bodas en esta parroquia al estilo
-                tradicional de la Iglesia Católica. Por favor revisar el <a href="#dress-code-btn">código de vestimenta</a>
+                La ceremonia de bodas sera realizada al estilo tradicional 
+                en la Iglesia Católica. Por favor revisar el <a href="#dress-code-btn">código de vestimenta</a>
                 de este evento. 
               </p>
             </div>
@@ -195,9 +190,9 @@
               <p><strong>16 de Mayo del 2025</strong></p>
               <h5>Club Deportivo Naco - Extensión Salon Principal <span class="time">9PM - 3AM</span></h5>
               <p>
-                Tendremos la celebración de la fiesta de bodas en el Salon Extension Salon Principal del Club Deportivo Naco. 
+                La recepción será celebrada en el Salon Extension Salon Principal del Club Deportivo Naco. 
                 Por favor revisar el <a href="#dress-code-btn">código de vestimenta</a>
-                de este evento. Les recuerdo que para la fiesta, <strong>los niños no estan permitidos.</strong>
+                de este evento. Les recuerdo que para la recepción, <strong>los niños no estan permitidos.</strong>
               </p>
             </div>
           </div>
@@ -210,7 +205,7 @@
               data-toggle="modal"
               data-target="#dc-modal"
             >
-              <i class="fa fa-barcode"></i>&nbsp;&nbsp;Codigo de Vestimenta
+              <i class="fa fa-barcode"></i>&nbsp;&nbsp;Código de Vestimenta
             </a>
           </div>
         </div>
@@ -229,8 +224,8 @@
                 <span>&times;</span>
               </button>
               <h3 class="text-center section-padding">¿Cuál es el Codigo de Vestimenta?</h3>
-              <h5>Parroquia Jesús Maestro <span class="time">6PM - 8PM</span></h5>
-              <h5>Club Deportivo Naco - Extension Salon Principal <span class="time">9PM - 3AM</span></h5>
+              <h5>Parroquia Jesús Maestro <span class="time">7PM</span></h5>
+              <h5>Club Deportivo Naco - Extension Salon Principal <span class="time">9PM</span></h5>
               <p>
                 <strong>Ropa formal</strong>
                 <br />
@@ -449,6 +444,14 @@
                   <p>Calle Salvador Sturla esq. Calle Gracita Álvarez, Ensanche Naco, Santo Domingo, Distrito Nacional, República Dominicana</p>
                 </div>
                 <div class="col-md-6">
+                  <h5>Hilda Hidalgo</h5>
+                  <h3>Wedding Planner</h3>
+                  <p>
+                    <i class="fa fa-mobile"></i>
+                    <a href="tel://+18298529862">+1 829 342 7066</a><br />
+                    <i class="fa fa-whatsapp"></i>
+                    <a href="https://wa.me/+18293427066">WhatsApp</a>
+                  </p>
                   <h5>Mariela Nouel</h5>
                   <p>
                     <i class="fa fa-mobile"></i>
@@ -563,7 +566,7 @@
             <p>
               Estariamos muy agradecidos si pudiera confirmar su asistencia
             </p>
-            <a href="https://withjoy.com/emmanuel-and-mariela/rsvp" target="_blank" class="btn btn-accent btn-small">Confirmar Asistencia</a>
+            <a href="https://withjoy.com/mariela-and-emmanuel/rsvp" target="_blank" class="btn btn-accent btn-small">Confirmar Asistencia</a>
           </div>
         </div>
       </div>
